Fixed Service Card components and made them look better on smaller screens

--- a/src/components/ServiceCard/ServiceCard.module.css
+++ b/src/components/ServiceCard/ServiceCard.module.css
@@ -1,4 +1,5 @@
 .serviceCard {
+  height: 100%;
   display: flex;
   overflow: hidden;
   border-radius: 10px;
@@ -16,7 +17,8 @@
 
 .serviceImageContainer {
   width: 200px;
-  height: 200px;
+  height: 100%;
+  display: flex;
   flex-shrink: 0;
   overflow: hidden;
 }
@@ -47,10 +49,38 @@
   color: var(--text-secondary);
 }
 
+.serviceMetaSeperator {
+  margin: 0 0.5rem;
+  color: var(--text-primary);
+}
+
 .serviceDescription {
   margin-top: auto;
   font-weight: 400;
   line-height: 1.5;
   font-size: 1.1rem;
   color: var(--text-secondary);
+}
+
+@media (max-width: 840px) {
+  .serviceCard {
+    height: auto;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .serviceImageContainer {
+    width: 100%;
+    height: auto;
+  }
+
+  .serviceImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .serviceContent {
+    text-align: center;
+  }
 }
